# vcdiff-utils

./: Cargo.toml  README.md
src/: applicator.rs  decoder.rs  encoder.rs  extractor.rs  lib.rs  merger.rs  reader.rs  translator.rs
testing/: .gitignore  Cargo.toml
testing/src/: main.rs
vcdiff-common/: Cargo.toml  README.md
vcdiff-common/src/: lib.rs
vcdiff-decoder/: Cargo.toml  README.md
vcdiff-decoder/src/: lib.rs
vcdiff-merger/: Cargo.toml  README.md
vcdiff-merger/src/: lib.rs
vcdiff-reader/: Cargo.toml  README.md
vcdiff-reader/src/: lib.rs
vcdiff-testing/: Cargo.toml  README.md
vcdiff-testing/src/: main.rs
vcdiff-writer/: Cargo.toml  README.md
vcdiff-writer/src/: lib.rs
