[package]
name = "vcdiff-merger"
description = "A pure Rust library for merging VCDIFF files."
license = "MIT"
version = "1.0.0"
edition = "2021"
keywords = ["vcdiff", "delta", "patch", "delta encoding", "delta compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
vcdiff-common ={ path = "../vcdiff-common"}
vcdiff-reader ={ path = "../vcdiff-reader"}
vcdiff-writer ={ path = "../vcdiff-writer"}

[dev-dependencies]
vcdiff-decoder ={ path = "../vcdiff-decoder"}