[package]
name = "vcdiff-merger"
repository = "https://github.com/ThinkingJoules/vcdiff-utils"
description = "A pure Rust library for merging VCDIFF files."
license = "MIT"
version = "1.0.0"
edition = "2021"
keywords = ["vcdiff", "delta", "patch", "delta-encoding", "delta-compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
vcdiff-common ={ version = "1", path = "../vcdiff-common"}
vcdiff-reader ={ version = "1", path = "../vcdiff-reader"}
vcdiff-writer ={ version = "1", path = "../vcdiff-writer"}

[dev-dependencies]
vcdiff-decoder ={ path = "../vcdiff-decoder"}