[package]
name = "vcdiff-reader"
description = "A library for reading VCDIFF files"
license = "MIT"
version = "1.0.0"
edition = "2021"
keywords = ["vcdiff", "delta", "patch", "delta encoding", "delta compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
vcdiff-common ={ path = "../vcdiff-common"}