[package]
name = "vcdiff-reader"
repository = "https://github.com/ThinkingJoules/vcdiff-utils"
description = "A library for reading VCDIFF files"
license = "MIT"
version = "1.0.0"
edition = "2021"
keywords = ["vcdiff", "delta", "patch", "delta encoding", "delta compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
vcdiff-common ={ version = "1", path = "../vcdiff-common"}